--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://ameerqatmosh.gitnhub.io/School-Managment-System",
+  "homepage": "https://ameerqatmosh.github.io/School-Managment-System",
   "name": "school-managment-system",
   "version": "1.0.0",
   "description": "Task, Assignment for Team Project 2 course\r ![image](https://user-images.githubusercontent.com/68341128/187083712-8d169c1c-acbb-4cf2-931b-a7804ceabc74.png)",
